Fix in similar component style

--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -18,7 +18,7 @@
       margin: 6px 0 35px 0;
     }
     .me-page--profile__section & {
-      grid-column: 8 span;
+      //grid-column: 8 span;
       margin: 0 0 35px 0;
     }
   }
