--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -124,6 +124,7 @@
         <div class="me-card__similar me-chip mdc-chip"
              data-action="click->event#showSimilar"
              data-action="click->event#showSimilar"
+             data-action="click->event#showSimilar"
              data-target="event.similar"
              title="Mostrar eventos parecidos">
           Ver similares
