Create top bar for movies and events

--- a/web/app/assets/stylesheets/components/me-bottom-navigation.scss
+++ b/web/app/assets/stylesheets/components/me-bottom-navigation.scss
@@ -28,6 +28,7 @@
     justify-content: center;
     width: 100%;
     height: inherit;
+    position: relative;
 
     &.active {
       & .icon, .label {
