--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -72,7 +72,7 @@
       right: 4px;
 
       & .me-icon-button.mdc-icon-button {
-        @include mdc-icon-button-size($width: 16px, $height: 16px, $padding: 8px);
+        @include mdc-icon-button-icon-size($width: 16px, $height: 16px, $padding: 8px);
       }
     }
 
