--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -6,12 +6,13 @@ $font-color: $font-primary-color;
 $border-color: #e0e0e0;
 
 .me-top-app-bar {
-  background-color: darken($surface-color, 1%);
+  background-color: $surface-color;
   color: $font-color;
   position: fixed;
   top: 0;
   user-select: none;
-  box-shadow: 0 0 3px #00000030;
+  // border-bottom: 1px solid lighten($border-color, 8%);
+  //box-shadow: 0 0 3px #00000030;
   @include mdc-layout-grid-media-query_("phone") {
     // &.mdc-top-app-bar--fixed-scrolled {
     //   background-color: $background-color;
@@ -172,7 +173,7 @@ $border-color: #e0e0e0;
   }
 
   & .mdc-text-field:not(.mdc-text-field--disabled) {
-    background-color: $surface-color;
+    background-color: $surface-secondary-color;
 
     @include mdc-layout-grid-media-query_("phone") {
       background-color: $surface-color;
