Initial refactor in components style and template

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -33,7 +33,7 @@ $section-padding-phone: 20px;
   }
 }
 
-$background-color: #FDFFFC;
+$background-color: #f7f7f7;
 $background-z0-color: #FAFAFA;
 $background-z1-color: #ffffff;
 
