--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -14,7 +14,7 @@
           <span class="mdc-tab__content">
             <span class="mdc-tab__text-label">Eventos</span>
           </span>
-          <span class="mdc-tab-indicator <%= 'mdc-tab-indicator--active' if props[:active] == :events %>">
+          <span class="me-tab-indicator mdc-tab-indicator <%= 'mdc-tab-indicator--active' if props[:active] == :events %>">
             <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
           </span>
           <span class="mdc-tab__ripple"></span>
