--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -84,7 +84,7 @@ body {
   margin: 0;
   font-family: $font-secondary-family;
   font-size: 14px;
-  background: $background-z1-color;
+  background: $background-color;
   color: $font-secondary-color;
 
   @include mdc-layout-grid-media-query_("phone") {
@@ -267,7 +267,3 @@ a {
 .abcRioButtonErrorState .abcRioButtonWorkingWrapper {
   display: none
 }
-
-
-
-
